post req is working

--- a/src/components/postBlock/PostBlock.scss
+++ b/src/components/postBlock/PostBlock.scss
@@ -19,79 +19,17 @@
   }
 }
 
-
-
-
-.select-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  margin-top: 25px;
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
-  color: rgba(0, 0, 0, 0.87);
-  margin-top: 43px;
-  margin-left: -16%;
-
-  h2 {
-    font-family: "Nunito";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
-    color: rgba(0, 0, 0, 0.87);
+.sign-up-btn {
+  background: #B4B4B4;
+  border-radius: 80px;
+  font-family: Nunito;
+  width: 100px;
+  height: 34px;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    background: #ffe302;
   }
+  margin-top: 50px;
+  margin-bottom: 100px;
 }
-
-.radioBtn {
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
-  color: rgba(0, 0, 0, 0.87);
-}
-
-// .upload-photo-form {
-//   border: 1px solid #d0cfcf;
-//   border-radius: 4px;
-//   width: 380px;
-//   height: 54px;
-//   position: relative;
-//   margin-top: 47px;
-
-//   .upload-button {
-//     height: 54px;
-//     width: 83px;
-//     font-family: "Nunito";
-//     font-style: normal;
-//     font-weight: 400;
-//     font-size: 16px;
-//     line-height: 26px;
-//     display: flex;
-//     align-items: center;
-//     text-align: center;
-//     color: rgba(0, 0, 0, 0.87);
-//   }
-
-//   .upload-text {
-//     font-family: 'Nunito';
-//     font-style: normal;
-//     font-weight: 400;
-//     font-size: 16px;
-//     line-height: 26px;
-//     display: flex;
-//     align-items: center;
-//     color: #7E7E7E;
-//     position: absolute;
-//     top: 0px;
-//     left: 100px;
-//   }
-// }
-
-
-
