code has been refactored

--- a/src/components/postBlock/PostBlock.scss
+++ b/src/components/postBlock/PostBlock.scss
@@ -19,17 +19,32 @@
   }
 }
 
-.sign-up-btn {
-  background: #B4B4B4;
-  border-radius: 80px;
-  font-family: Nunito;
-  width: 100px;
-  height: 34px;
-  border: none;
-  cursor: pointer;
-  &:hover {
-    background: #ffe302;
-  }
-  margin-top: 50px;
-  margin-bottom: 100px;
-}
+// .submit-button-gray {
+//   background: #B4B4B4;
+//   border-radius: 80px;
+//   font-family: Nunito;
+//   width: 100px;
+//   height: 34px;
+//   border: none;
+//   cursor: pointer;
+//   &:hover {
+//     background: #ffe302;
+//   }
+//   margin-top: 50px;
+//   margin-bottom: 100px;
+// }
+
+// .submit-button-yellow {
+//   background: #F4E041;
+//   border-radius: 80px;
+//   font-family: Nunito;
+//   width: 100px;
+//   height: 34px;
+//   border: none;
+//   cursor: pointer;
+//   &:hover {
+//     background: #ffe302;
+//   }
+//   margin-top: 50px;
+//   margin-bottom: 100px;
+// }
