--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -5,6 +5,7 @@
   margin-right: 60px;
   margin-top: 10px;
   padding-bottom: 10px;
+  position: relative;
 }
 
 .headerBtn {
@@ -22,4 +23,25 @@
   }
 }
 
+@media (max-width: 768px) {
+  .header-container {
+    flex-direction: row;
+    align-items: center;
+  }
 
+  .buttons-header-container {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .headerBtn {
+    margin: 0 5px;
+  }
+
+  .header-logo {
+    margin-left: -50px;
+    margin-right: 30px;
+    margin-top: 8px;
+  }
+}
