--- a/src/components/postBlock/submitButton/SubmitButton.scss
+++ b/src/components/postBlock/submitButton/SubmitButton.scss
@@ -1,26 +1,26 @@
 .submit-button-gray {
-    background: #B4B4B4;
-    border-radius: 80px;
-    font-family: Nunito;
-    width: 100px;
-    height: 34px;
-    border: none;
-    cursor: pointer;
-    margin-top: 50px;
-    margin-bottom: 100px;
+  background: #b4b4b4;
+  border-radius: 80px;
+  font-family: Nunito;
+  width: 100px;
+  height: 34px;
+  border: none;
+  cursor: pointer;
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.submit-button-yellow {
+  background: #f4e041;
+  border-radius: 80px;
+  font-family: Nunito;
+  width: 100px;
+  height: 34px;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    background: #ffe302;
   }
-  
-  .submit-button-yellow {
-    background: #F4E041;
-    border-radius: 80px;
-    font-family: Nunito;
-    width: 100px;
-    height: 34px;
-    border: none;
-    cursor: pointer;
-    &:hover {
-      background: #ffe302;
-    }
-    margin-top: 50px;
-    margin-bottom: 100px;
-  }
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
