--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;600;700;800&family=Inter:wght@400;500;600&family=Nunito&display=swap");
+
 .content {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
-
-
