--- a/src/components/personContainer/PersonContainer.scss
+++ b/src/components/personContainer/PersonContainer.scss
@@ -48,7 +48,11 @@ h1 {
 @media only screen and (max-width: 480px) {
   .cards-container {
     flex-direction: column;
-    align-items: center;
+    margin-left: -85px;
+  }
+
+  .get-text{
+    width: 260px;
   }
 
   .cards-container > * {
