--- a/src/components/postBlock/PostBlock.scss
+++ b/src/components/postBlock/PostBlock.scss
@@ -19,32 +19,8 @@
   }
 }
 
-// .submit-button-gray {
-//   background: #B4B4B4;
-//   border-radius: 80px;
-//   font-family: Nunito;
-//   width: 100px;
-//   height: 34px;
-//   border: none;
-//   cursor: pointer;
-//   &:hover {
-//     background: #ffe302;
-//   }
-//   margin-top: 50px;
-//   margin-bottom: 100px;
-// }
-
-// .submit-button-yellow {
-//   background: #F4E041;
-//   border-radius: 80px;
-//   font-family: Nunito;
-//   width: 100px;
-//   height: 34px;
-//   border: none;
-//   cursor: pointer;
-//   &:hover {
-//     background: #ffe302;
-//   }
-//   margin-top: 50px;
-//   margin-bottom: 100px;
-// }
+@media only screen and (max-width: 480px) {
+  .post-text{
+    width: 260px;
+  }
+}
